--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1017,6 +1017,12 @@ a.btn-cta {
     font-size: 20px;
   }
 
+  .SocialSprites{
+    width: 15px;
+    height: 15px;
+    margin-left: 10px
+  }
+
 }
 /* Medium devices (desktops, 992px and up) */
 @media (min-width: 992px) {
@@ -1043,6 +1049,9 @@ a.btn-cta {
   }
   .team-section .item-inner {
     min-height: 490px;
+  }
+  .text{
+    font-size: 30px;
   }
 }
 /* Large devices (large desktops, 1200px and up) */
