--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -998,7 +998,7 @@ a.btn-cta {
   .SocialSprites{
     width: 15px;
     height: 15px;
-    margin-left: 20px
+    margin-left: 15px;
   }
 }
 /* Small devices (tablets, 768px and up) */
