--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -991,6 +991,7 @@ a.btn-cta {
     font-size: 15px;
   }
 
+/*
   .CompanyPhone{
     font-size: 15px;
   }
@@ -1000,6 +1001,7 @@ a.btn-cta {
     height: 15px;
     margin-left: 15px;
   }
+  */
 }
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) {
